--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hawaiki</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
     <nav>
         <a href="/">Hawaiki</a> 
         <a href="/products">Products</a>    
-        <a href="/login">Login</a>  
-       
+        <a href="/login">Login</a>    
     </nav>
     <main>
     {{{body}}}
