--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,3 +1,16 @@
-<h1>
-    PRODUCTS
-</h1>
+<div>
+    <h1>PRODUCTS</h1>
+</div>
+<div>
+
+{{#each products as |product|}}
+    <div class="product-cards">
+        <div class="product-header">
+            <h1>{{product.product_title}}</h1>
+            <h2>{{product.price}}</h2>
+        </div>
+        <img src="./images/{{product.filename}}" alt="{{product.filename}}">
+    </div>
+{{/each}}
+
+</div>
