product routes working

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -3,7 +3,7 @@
         <h1>{{product_title}}</h1>
         <h2>{{price}}</h2>
     </div>
-        <img src="./images/{{filename}}" alt="{{filename}}">
+        <img src="/images/{{filename}}" alt="{{filename}}">
     <div>
         <h3>Description:</h3>
         <p>{{description}}</p>
