--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -9,7 +9,7 @@
             <h1>{{product.product_title}}</h1>
             <h2>{{product.price}}</h2>
         </div>
-        <a href="/products/{{product.product_id}}">
+        <a href="./products/{{product.id}}">
         <img src="./images/{{product.filename}}" alt="{{product.filename}}">
         </a>
     </div>
