login.handlebars transffered

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,40 @@
-<h1>
-    LOGIN
-</h1>
+<div>
+  <h3>Sign Up</h3>
+  <form class="signup-form">
+    <div>
+      <label for="username-signup">Enter a username</label>
+      <input type="text" id="username-signup" />
+    </div>
+    <div>
+      <label for="email-signup">email:</label>
+      <input type="text" id="email-signup"></input>
+    </div>
+    <div>
+      <label for="password-signup">password:</label>
+      <input type="password" id="password-signup"></input>
+    </div>
+    <div>
+            <button type="submit" class="btn" id="signup-btn">Signup</button>
+    </div>
+
+  </form>
+</div>
+
+<div>
+<h3>Login</h3>
+<form class="login-form">
+  <div>
+    <label for="login-email">email:</label>
+    <input type="text" id="login-email">
+  </div>
+  <div>
+    <label for="login-password">Password</label>
+    <input type="text" id="login-password">
+  </div>
+  <button type="submit" class="btn" id="login-btn">Login</button>
+
+</form>
+
+</div>
+
+<script src="./js/login.js"></script>
