added product images and css to homepage/products

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,5 @@
-<h1>THIS IS THE HOMEPAGE</h1>
+<div class="homepageHero">
+    <h1 class="homepageHeader"> Welcome to Hawaiki Shop </h1>
+    <img class="homepageImg" src="./images/homepage-img.jpg" alt="home-page-img">
+    <h2 class="homepageHeader">The official online store for all Hawaiki Merchandise</h2>
+</div>
