--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hawaiki</title>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="iziModal.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
     <nav>
         <a href="/">Hawaiki</a> 
         <a href="/products">Products</a>    
-        <a href="/login">Login</a>    
+        <a href="/login" class="trigger" data-izimodal-open="#modal">login</a>
+        <a href="/checkout">Checkout</a>    
     </nav>
     <main>
     {{{body}}}
@@ -23,5 +25,10 @@
       </p>  
     </footer>
     </main>
+          <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="iziModal.min.js" type="text/javascript"></script>
+        <script src="/login.js"></script>
+
+
 </body>
 </html>
