--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,28 @@
-<h1>
-    LOGIN
-</h1>
+
+<div id="modal" data-iziModal-group="grupo1">
+        <button data-iziModal-close class="icon-close">x</button>
+        <header>
+            <a href="" id="signin">Sign in</a>
+            <a href="" class="active">New Account</a>
+        </header>
+        <section class="hide">
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <footer>
+                <button data-iziModal-close>Cancel</button>
+                <button class="submit">Log in</button>            
+            </footer>
+        </section>
+        <section>
+            <input type="text" placeholder="Username">
+            <input type="text" placeholder="Email">
+            <input type="password" placeholder="Password">
+            <label for="check"><input type="checkbox" name="checkbox" id="check" value="1"> I agree to the <u>Terms</u>.</label>
+            <footer>
+                <button data-iziModal-close>Cancel</button>
+                <button class="submit">Create Account</button>            
+            </footer>
+        </section>
+    </div>
+      
+
