--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -7,5 +7,20 @@
     <div>
         <h3>Description:</h3>
         <p>{{description}}</p>
+        <form id='addToCartForm'>
+        <label for="quantity">Quantity</label>
+
+<input type="number" id="quantity" name="quantity"
+       min="1" max="100" value='1'><br>
+       Size
+<select id='size' name='size'>
+   <option value="S">S</option>
+    <option value="M">M</option>
+    <option value="L">L</option>
+</select>
+    <button type='submit' id='addToCartBtn'>Add to Cart </button>
+
+</form>
+
     </div>    
 </div>
