--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <title>Hawaiki</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="iziModal.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/css/iziModal.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
@@ -16,10 +16,11 @@
     <nav>
         <a href="/">Hawaiki</a> 
         <a href="/products">Products</a>    
-        <a href="/login" class="trigger" data-izimodal-open="#modal">login</a>
+        {{!-- <a href="/login" class="trigger" data-izimodal-open="#modal">login</a> --}}
         <a href="/checkout">Checkout</a>    
+        <div id="modal"></div>
         
-        <a href="/products">Shop</a>
+        {{!-- <a href="/products">Shop</a> --}}
         <a href="/"><img src="/images/Hawaikilogo.png" alt="home-icon" height="150" width="150"></a>     
         {{#if logged_in}}
         <a href="#" id="logout">Logout</a>
@@ -39,12 +40,15 @@
     </footer>
 {{#if logged_in}}
 <script src="/js/logout.js"></script>
+{{else}}
+        <script src="/login.js"></script>
+
 {{/if}}
 
     </main>
-          <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="iziModal.min.js" type="text/javascript"></script>
-        <script src="/login.js"></script>
+    {{!-- <script src="/js/bundle.js"></script> --}}
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/js/iziModal.min.js" type="text/javascript"></script>
 
 
 </body>
