comment harcoded modal

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 
-<div id="modal" data-iziModal-group="grupo1">
+{{!-- <div id="modal" data-iziModal-group="grupo1">
         <button data-iziModal-close class="icon-close">x</button>
         <header>
             <a href="" id="signin">Sign in</a>
@@ -23,7 +23,7 @@
                 <button class="submit">Create Account</button>            
             </footer>
         </section>
-    </div>
+    </div> --}}
       
 
 
