change sign-up from class to id

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
 
 <div>
   <h3>Sign Up</h3>
-  <form class="signup-form">
+  <form id="signup-form">
     <div>
       <label for="username-signup">Enter a username</label>
       <input type="text" id="username-signup" />
@@ -51,7 +51,7 @@
 
 <div>
 <h3>Login</h3>
-<form class="login-form">
+<form id="login-form">
   <div>
     <label for="login-email">email:</label>
     <input type="text" id="login-email">
