--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,11 @@
     <title>Hawaiki</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/css/iziModal.min.css">
+    {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/css/iziModal.min.css"> --}}
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izimodal-1.6.0@1.6.1/css/iziModal.min.css">
+    <link rel="stylesheet" type="text/css" href="/iziModal.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
@@ -24,11 +26,46 @@
         {{#if logged_in}}
         <a href="#" id="logout">Logout</a>
         {{else}}
-        <a href="#" data-izimodal-open="#modal">Login</a>    
+        <a href="#" data-izimodal-open="#modal-custom">Login</a>  
+          
         {{/if}}
     </nav>
     <main>
-        <div id="modal"><a href="#">Modal</a></div>
+        <div id="modal-alert" 
+        class="iziModal hide" 
+             {{!-- data-iziModal-title="Welcome"  
+             data-iziModal-subtitle="Subtitle"   --}}
+             {{!-- data-iziModal-loop="true" --}}
+             {{!-- data-iziModal-group="grupo1" --}}
+             ></div>
+
+        <div id="modal-custom" class="hide" data-iziModal-group="grupo1">
+        <button data-iziModal-close="" class="icon-close">x</button>
+        <header>
+            <a href="" id="signin">Sign in</a>
+            <a href="" class="active">New Account</a>
+        </header>
+        <section class="hide">
+            <form id="login-form">
+            <input type="text" placeholder="Email" id="login-email">
+            <input type="password" placeholder="Password" id="login-password">
+            <footer>
+                <button type="submit" class="submit">Log in</button>            
+                <button data-iziModal-close="">Cancel</button>
+            </footer>
+            </form>
+        </section>
+        <section>
+            <input type="text" placeholder="Username">
+            <input type="text" placeholder="Email">
+            <input type="password" placeholder="Password">
+            {{!-- <label for="check"><input type="checkbox" name="checkbox" id="check" value="1"> I agree to the <u>Terms</u>.</label> --}}
+            <footer>
+                <button class="submit">Create Account</button>            
+                <button data-iziModal-close="">Cancel</button>
+            </footer>
+        </section>
+    </div>
     {{{body}}}
 
     <footer>
