--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 
-<div id="modal" data-iziModal-group="grupo1">
+{{!<div id="modal" data-iziModal-group="grupo1">
         <button data-iziModal-close class="icon-close">x</button>
         <header>
             <a href="" id="signin">Sign in</a>
@@ -24,7 +24,7 @@
             </footer>
         </section>
     </div>
-      
+      }}
 
 
 <div>
