--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -16,9 +16,8 @@
    <option value="S">S</option>
     <option value="M">M</option>
     <option value="L">L</option>
-</select>
+</select><br>
     <button type='submit' id='addToCartBtn'>Add to Cart </button>
-
 </form>
 
     </div>    
