css worling in one file

--- a/public/iziModal.css
+++ b/public/iziModal.css
@@ -1,21 +1,20 @@
 
 
-
 /* html, body, div, span, applet, object, iframe, h1, h2, h3,
 h4, h5, h6, p, blockquote, pre, a, abbr, acronym,
 address, big, cite, code, del, dfn, em, font, img, ins,
 kbd, q, s, samp, small, strike, strong, sub, sup, tt,
 var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-weight: inherit;
-    font-style: inherit;
-    font-size: 100%;
-    font-family: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
 }
 :focus { outline: 0;}
 a:link, a:visited, a:active{text-decoration:none; color: #21b3b4}
@@ -28,11 +27,12 @@ input, textarea, select, button {font-size: 100%;font-family: inherit;}
 *, *:after, *::before{box-sizing:border-box; -ms-box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;} */
 
 /* body{
-    font-family: arial;
-    background: #F0F2F1;
-    overflow-x:hidden;
-    padding:20px;
-  } */
+  font-family: arial;
+  background: #F0F2F1;
+  overflow-x:hidden;
+  padding:20px;
+} */
+/* 
   .hide{
     display: none;
   }
@@ -224,4 +224,4 @@ input, textarea, select, button {font-size: 100%;font-family: inherit;}
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  } 
+  }  */
