Added eventhandler functions for checkout

--- a/public/style.css
+++ b/public/style.css
@@ -444,3 +444,7 @@ table {
       font-size: large;
       font-family: 'Permanent Marker', cursive;
   }
+  #productId {
+     display:none;
+    }
+  
