--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -3,6 +3,7 @@
         <h1 >Cart</h1>
         <a href="/products"><h2>Continue Shopping</h2></a>
     </div>
+    <form class="checkoutForm">
     <table>
   <tr>
     <th>Product</th>
@@ -26,15 +27,14 @@
   <tr style="border-bottom: white;">
     <td>  </td>
     <td>  </td>
-        <td>  </td>
-
+    <td>  </td>
     <td><h3>Subtotal:</h3></td>
     <td>{{Subtotal}}</td>
   </tr>
 </table>
 <div class="btnGroup">
 <button id="updateCartBtn">Update Cart</button>
-<button id="checkoutBtn">Checkout</button>
+<button type="submit" id="checkoutBtn">Checkout</button>
 </div>
-  </div>    
+  </div>    </form>
 </div>
