--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 
-{{!<div id="modal" data-iziModal-group="grupo1">
+<div id="modal" data-iziModal-group="grupo1">
         <button data-iziModal-close class="icon-close">x</button>
         <header>
             <a href="" id="signin">Sign in</a>
@@ -24,10 +24,10 @@
             </footer>
         </section>
     </div>
-      }}
+      
 
 
-<div>
+{{!<div>
   <h3>Sign Up</h3>
   <form class="signup-form">
     <div>
@@ -67,3 +67,4 @@
 </div>
 
 <script src="./js/login.js"></script>
+}}
