--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,7 +1,7 @@
         <form id='addToCartForm'>
 
 <h1 class="shopTitle">{{product_title}}</h1>
-<div id="productId" > {{id}}</div>
+<div><p id="productId">{{id}}</p></div>
 <div class="itemDiv">
         <img class="itemImg" src="/images/{{filename}}" alt="{{filename}}">
     <div class="itemDescription">
