relocated files to correct folders

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -407,7 +407,7 @@ table {
       font-size: large;
       font-family: 'Permanent Marker', cursive;
   }
-  #productId {
+  /* #productId {
      display:none;
-    }
+    } */
   
