--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izimodal-1.6.0@1.6.1/css/iziModal.min.css">
     {{!-- <link rel="stylesheet" type="text/css" href="/iziModal.css"> --}}
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
     <nav>
@@ -74,7 +74,7 @@
 {{#if logged_in}}
 <script src="/js/logout.js"></script>
 {{else}}
-        <script src="/login.js"></script>
+        <script src="/js/login.js"></script>
 
 {{/if}}
 
