--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,7 +1,6 @@
         <form id='addToCartForm'>
 
-<h1 class="shopTitle">{{product_title}}</h1>
-<div><p id="productId">{{id}}</p></div>
+<h1 id="productId" class="shopTitle" data-id="{{id}}">{{product_title}}</h1>
 <div class="itemDiv">
         <img class="itemImg" src="/images/{{filename}}" alt="{{filename}}">
     <div class="itemDescription">
@@ -22,4 +21,4 @@
 </form>
     </div>    
 </div>
-<script src="/product.js"></script>
+<script src="/js/product.js"></script>
