--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -21,7 +21,7 @@
        min="1" max="100" value='{{product.product_quantity}}'>
           <button id="removeBtn">Remove</button>
         </td>
-    <td>{{total}}</td>
+    <td id="total">{{total}}</td>
   </tr>
   {{/each}}
   <tr style="border-bottom: white;">
