--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -5,25 +5,24 @@
     </div>
     <form class="checkoutForm">
     <table>
-  <tr>
-    <th>Product</th>
-    <th style="width:45%">Name</th>
-    <th>Price</th>
-    <th>Quantity</th>
-    <th>Total</th>
+    <tr>
+      <th>Product</th>
+      <th style="width:45%">Name</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Total</th>
     </tr>
-{{#each products as |product|}}
-  <tr>
-    <td>  <img src="/images/{{product.filename}}" alt="{{product.filename}}"></td>
-    <td>{{product.product_title}}</td>
-    <td>{{product.price}}</td>
-        <td><input type="number" id="quantity" name="quantity"
-       min="1" max="100" value='{{product.product_quantity}}'>
+    {{#each products as |product|}}
+    <tr>
+      <td>  <img src="/images/{{product.filename}}" alt="{{product.filename}}"></td>
+      <td>{{product.product_title}}</td>
+      <td>{{product.price}}</td>
+          <td><input type="number" id="quantity" name="quantity" min="1" max="100" value='{{product.product_quantity}}'>
           <button id="removeBtn">Remove</button>
-        </td>
-    <td id="total">{{total}}</td>
-  </tr>
-  {{/each}}
+          </td>
+      <td id="total">{{total}}</td>
+    </tr>
+    {{/each}}
   <tr style="border-bottom: white;">
     <td>  </td>
     <td>  </td>
@@ -36,5 +35,5 @@
 <button id="updateCartBtn">Update Cart</button>
 <button type="submit" id="checkoutBtn">Checkout</button>
 </div>
-  </div>    </form>
+</div> </form>
 </div>
