--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -8,7 +8,8 @@
     <p>{{description}}</p>
     <label for="quantity">Quantity</label>
     <input type="number" id="quantity" name="quantity" min="1" max="100" value='1'><br><br>
-    Size<select id='size' name='size'>
+    <label for="size">Size</label>
+    <select id='size' name='size'>
             <option value="S">S</option>
             <option value="M">M</option>
             <option value="L">L</option>
