--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,14 +10,14 @@ nav {
   display: flex;
   text-decoration: none;
   justify-content: space-around;
-  font-size: 3rem;
+  font-size: 2rem;
   margin: 0px 50px 0px 50px;
 }
 nav a {
   text-decoration: none;
   text-align: center;
   color: black;
-  opacity: 0.8;
+
 }
 
 nav a:hover {
@@ -30,7 +30,6 @@ footer {
   margin-top: 50px;
   font-family: "Permanent Marker", cursive;
 }
-
 
 .hide{
   display: none;
@@ -228,7 +227,6 @@ footer {
 /* Rua's CSS */
 
 footer h1 {
-  opacity: 0.8;
   text-align: center;
 }
 .fa {
@@ -261,10 +259,9 @@ footer h1 {
   border-radius: 50px 50px 50px 50px;
   height: 700px;
   width: 900px;
-  box-shadow: 0px 0px 25px var(--sea);
+  box-shadow: 0px 0px 20px rgb(165, 163, 163);
 }
 .homepageHeader {
-  opacity: 0.8;
   text-align: center;
   font-family: "Poppins", sans-serif;
   margin: 20px 50px 20px 50px;
@@ -274,7 +271,6 @@ footer h1 {
   text-shadow: 4px 4px var(--sea);
   text-align: center;
   font-size: 3rem;
-  opacity: 0.8;
 }
 .productsDiv {
   display: grid;
@@ -283,16 +279,15 @@ footer h1 {
 }
 
 .productImg {
-  border-radius: 50px 50px 50px 50px;
+  border-radius:30px;
   width: 350px;
   height: 350px;
-}
-.productHeader {
-  opacity: 0.8;
+  box-shadow: 0px 0px 20px rgb(165, 163, 163);
 }
 .price {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
+  color: var(--sea);
 }
 .itemDescription p {
   font-family: "Poppins", sans-serif;
@@ -312,6 +307,7 @@ footer h1 {
   border-radius: 50px;
   height: 600px;
   width: 600px;
+  box-shadow: 0px 0px 20px rgb(165, 163, 163);
 }
 
 @media screen and (max-width: 700px) {
@@ -399,13 +395,47 @@ table {
       margin:10px 40px;
       text-align: right;
   }
+  label {
+      font-size: 1.5rem;
+  }
   button {
       padding: 5px 20px;
       border-radius: 10px;
       background-color:var(--sea);
-      color: black;
+      color: white;
       font-size: large;
-      font-family: 'Permanent Marker', cursive;
+      font-family: "Poppins", sans-serif;
+      border-color: none;
+      border-style: none;
+      font-size: 1.5rem;
+      font-weight: bolder;
+      margin: 10px;
+  }
+  button:hover {
+    opacity: .5;
+  }
+  .continueShop {
+    text-decoration: none;
+    color: black;
+  }
+  .continueShop:hover {
+    text-shadow: 4px 4px var(--sea);
+  }
+  .checkoutImg {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px rgb(165, 163, 163);
+    margin: 10px;
+  }
+  .checkoutInfo, #total {
+    font-size: 1.3rem;
+  }
+  .subtotal {
+    font-size: 2rem;
+    color: var(--sea);
+    font-weight: bolder;
+    font-family: "Poppins", sans-serif;
   }
   /* #productId {
      display:none;
