--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         <a href="/"><img src="/images/Hawaikilogo.png" alt="home-icon" height="150" width="150"></a> 
           {{!-- <a href="/login" class="trigger" data-izimodal-open="#modal">login</a> --}}
           <a href="/products">Products</a>    
-        <a href="/checkout">Checkout</a>       
+        <a href="/checkout">Cart</a>       
         {{#if logged_in}}
         <a href="#" id="logout">Logout</a>
         {{else}}
